<resources>
    <string name="app_name">TicTacToe</string>
    <string name="score_label_human">Human:</string>
    <string name="score_label_computer">Android:</string>
    <string name="score_label_tie">Ties:</string>

    <string name="first_human">You go first.</string>
    <string name="first_computer">will go first.</string>

    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>

    <string name="result_tie">Game Over: It\'s a tie!.</string>
    <string name="result_human_wins">Game Over: You won!</string>
    <string name="result_computer_wins">Game Over: Android won!</string>

    <string name="star_new_game_label">Start new game</string>
    <string name="difficulty_level_label">Select difficulty level</string>
    <string name="settings_label">Settings</string>
    <string name="reset_scores_label">Reset Scores</string>
    <string name="about_label">About</string>
    <string name="quit_label">Quit</string>
    <string name="dialog_quit_question">Are you sure you want to quit?</string>
    <string name="dialog_reset_question">Are you sure you want to reset scores?</string>

    <string name="difficulty_choose">Choose a difficulty level</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>
    <string name="main_icon_description">TicTacToe Desctiption</string>
    <string name="about_app_label">Universidad Nacional de Colombia\nJhon Ramirez</string>
    <string name="enter_nickname_hint">Enter a nickname</string>
    <string name="play_button_label">Play</string>
</resources>
