<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/start_new_game"
        android:title="@string/star_new_game_label"
        android:icon="@drawable/ic_new_game"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings_label"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/about"
        android:title="@string/about_label"
        android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/quit"
        android:title="@string/quit_label"
        android:icon="@drawable/ic_exit"
        app:showAsAction="ifRoom"/>
</menu>