<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/main_icon_description"
        app:srcCompat="@drawable/ic_tictactoe" />

    <Button
        android:id="@+id/playButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nicknameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="joinGameAction"
        android:text="@string/play_button_label" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/enter_nickname_hint"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/playButton"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>